<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forecast_item_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#1C1F38">

    <TextView
        android:layout_gravity="center"
        android:layout_margin="@dimen/elements_base_margin"
        android:id="@+id/day_name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorNormal" />

        <ImageView
            android:id="@+id/forecast_item_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/elements_base_margin_double"
            android:src="@mipmap/ic_sunny" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/forecast_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:textAlignment="center"
            android:layout_margin="@dimen/elements_base_margin"
            android:textColor="@color/colorNormal" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/forecast_item_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rain_chances"
        android:textAlignment="center"
        android:layout_margin="@dimen/elements_base_margin"
        android:textColor="@color/colorNormal" />

    <TextView
        android:id="@+id/forecast_item_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/elements_base_margin"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="@color/colorNormal" />

    <RelativeLayout
        android:id="@+id/temperature_line_layout"
        android:layout_width="96dp"
        android:layout_height="48dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/temperature_line"></View>
    </RelativeLayout>

        <TextView
            android:layout_gravity="center"
            android:id="@+id/forecast_item_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:layout_margin="@dimen/elements_base_margin"
            android:textColor="@color/colorNormal" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/forecast_item_wind_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_info"
            android:textAlignment="center"
            android:layout_margin="@dimen/elements_base_margin"
            android:textColor="@color/colorNormal" />

</android.support.v7.widget.LinearLayoutCompat>